# AIProj

AdbMem/: README_meminfo_visualizer.md  adb_meminfo_config.json  adb_meminfo_config2.json  adb_meminfo_monitor.py  chat_history.md  meminfo_demo.html  meminfo_output_20260120_182657.txt  meminfo_output_20260120_183616.md  meminfo_output_20260120_184312.md  meminfo_output_20260120_200350.md  meminfo_output_20260120_200626.md  meminfo_output_20260120_202136.md  meminfo_viewer.html  meminfo_visualizer.py
CppPathTracing/: CMakeLists.txt  README.md  build_mingw.bat  build_msvc.bat
CppPathTracing/docs/: development-history.md  ray-sphere-intersection.md  what-is-path-tracing.md
CppPathTracing/src/: hittable.h  hittable_list.h  main.cpp  material.h  ray.h  sphere.h  utils.h  vec3.h
DLSS/: .gitignore  DATASET_GUIDE.md  GPU_SETUP_GUIDE.md  README.md  USAGE_GUIDE.md  check_dataset.py  check_gpu.py  config.yaml  estimate_training_time.py  example_usage.py  inference.py  requirements.txt  test_model.py  train.py
DLSS/models/: __init__.py  esrgan.py
DLSS/utils/: __init__.py  dataset.py  image_utils.py
DLSS2/plans/: DLSS3_Architecture_Overview.md  DLSS3_Architecture_Study.md  README.md  references.md
Game/docs/: AI-Game-Development-Discussion.md
Nerf/: QUICKSTART.md  README.md  requirements.txt  run_example.py  tiny_nerf.py
Nerf/data/: .gitkeep
Nerf/output/: .gitkeep
PathTracing/: README.md  main.py  quick_test.py
PathTracing/scenes/: demo_scene.py
RealESRGAN/: README.md  inference.py  requirements.txt  test_example.py  使用指南.md  聊天历史.md
(+41 files in other folders)
